@@ -10,6 +10,7 @@ munin (CVS)
     secure.
   * Plugins: Minor bugfix in linux/if_, with info fields.
   * Docs: Added man page for munin-node-configure-snmp.
+  * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
   * Installation: Create CIGdir if nonexistant.
 
 munin (1.3.1)
